# BigDataLake

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
logs/: README.md
src/bigdatalake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/lakehouse/: __main__.py  bronze.py  cli.py  config.py  delta_ops.py  gold.py  ml.py  report_plots.py  silver.py
